# Cursus_42

./: README.md  calculate_lis.c  costs.c  libft_utils.c  list_utils.c  new_push_swap  new_push_swap.c  new_push_swap2  new_push_swap2.c  new_push_swap3  new_push_swap3.c  new_push_swap4  new_push_swap4.c  new_push_swap6.c  new_push_swap7  new_push_swap7.c  new_push_swap8  new_push_swap8.c  parsing.c  push.c  push_swap.c  push_swap.h  push_swap_final  reverse_rotate.c  rotate.c  rotations.c  swap.c
Libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+6 more)
back_up_push_swap/: new_push_swap.c  new_push_swap5  new_push_swap5.c  new_push_swap6  new_push_swap6.c  new_push_swap7.c  new_push_swap8  new_push_swap8.c  prueba  prueba.c
born2beroot/: README.md  monitoring.sh
ft_printf/: Makefile  README.md  aux.c  ft_printf.c  ft_printf.h  main.c
get_next_line/: README.md  example.txt  get_next_line.c  get_next_line.h  get_next_line_utils.c  main.c  (+4 more)
python/module_08/ex1/: loading.py  pyproject.toml  requirements.txt
(+145 files in other folders)
